Fix spacing

--- a/ttyl/ttyl.css
+++ b/ttyl/ttyl.css
@@ -283,10 +283,6 @@ p {
   font-size: 14px;
 }
 
-h5 {
-  color: #ADABBA;
-}
-
 .content {
   background-color: white;
   color: black;
@@ -307,19 +303,22 @@ h5 {
 
 h1 {
   font-size: 48px;
+  margin: 12px 0;
 }
 
 h2 {
   font-size: 24px;
+  margin: 40px 0 12px 0;
 }
 
 h3 {
   font-size: 20px;
 }
 
-h5 {
+.date {
   font-weight: normal;
   font-size: 20px;
+  color: #ADABBA;
 }
 
 p {
